// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Generator > Many-to-Many Relationships > should generate correct schema for implicit many-to-many relationship 1`] = `
"// Generated by Zero Schema Generator

import {
  table,
  string,
  boolean,
  number,
  json,
  enumeration,
  relationships,
  createSchema,
  type Row,
} from "@rocicorp/zero";

// Define tables

export const postTable = table("Post")
  .columns({
    id: number(),
    title: string(),
  })
  .primaryKey("id");

export const categoryTable = table("Category")
  .columns({
    id: number(),
    name: string(),
  })
  .primaryKey("id");

// Define schema

export const schema = createSchema(
  {
    tables: [
      postTable,
      categoryTable,
    ],
  }
);

// Define types
export type Schema = typeof schema;
export type Post = Row<typeof schema.tables.Post>;
export type Category = Row<typeof schema.tables.Category>;
"
`;

exports[`Generator > Many-to-Many Relationships > should use custom relation name for implicit many-to-many table 1`] = `
"// Generated by Zero Schema Generator

import {
  table,
  string,
  boolean,
  number,
  json,
  enumeration,
  relationships,
  createSchema,
  type Row,
} from "@rocicorp/zero";

// Define tables

export const postTable = table("Post")
  .columns({
    id: number(),
    title: string(),
  })
  .primaryKey("id");

export const categoryTable = table("Category")
  .columns({
    id: number(),
    name: string(),
  })
  .primaryKey("id");

export const _myCustomRelationTable = table("_MyCustomRelation")
  .from("_MyCustomRelation")
  .columns({
    A: string(),
    B: string(),
  })
  .primaryKey("A", "B");


// Define relationships

export const postTableRelationships = relationships(postTable, ({ many }) => ({
  categories: many({
    sourceField: ["id"],
    destField: ["B"],
    destSchema: _myCustomRelationTable,
  }, {
    sourceField: ["A"],
    destField: ["id"],
    destSchema: categoryTable,
  })
}));

export const categoryTableRelationships = relationships(categoryTable, ({ many }) => ({
  posts: many({
    sourceField: ["id"],
    destField: ["A"],
    destSchema: _myCustomRelationTable,
  }, {
    sourceField: ["B"],
    destField: ["id"],
    destSchema: postTable,
  })
}));

export const _myCustomRelationTableRelationships = relationships(_myCustomRelationTable, ({ one }) => ({
  modelA: one({
    sourceField: ["A"],
    destField: ["id"],
    destSchema: categoryTable,
  }),
  modelB: one({
    sourceField: ["B"],
    destField: ["id"],
    destSchema: postTable,
  })
}));

// Define schema

export const schema = createSchema(
  {
    tables: [
      postTable,
      categoryTable,
      _myCustomRelationTable,
    ],
    relationships: [
      postTableRelationships,
      categoryTableRelationships,
      _myCustomRelationTableRelationships,
    ],
  }
);

// Define types
export type Schema = typeof schema;
export type Post = Row<typeof schema.tables.Post>;
export type Category = Row<typeof schema.tables.Category>;
export type _MyCustomRelation = Row<typeof schema.tables._MyCustomRelation>;
"
`;

exports[`Generator > Schema Generation > should generate correct schema for basic model 1`] = `
"// Generated by Zero Schema Generator

import {
  table,
  string,
  boolean,
  number,
  json,
  enumeration,
  relationships,
  createSchema,
  type Row,
} from "@rocicorp/zero";

// Define tables

export const userTable = table("User")
  .columns({
    id: string(),
    name: string(),
    email: string(),
    age: number().optional(),
  })
  .primaryKey("id");

// Define schema

export const schema = createSchema(
  {
    tables: [
      userTable,
    ],
  }
);

// Define types
export type Schema = typeof schema;
export type User = Row<typeof schema.tables.User>;
"
`;

exports[`Generator > Schema Generation > should handle enums as unions correctly 1`] = `
"// Generated by Zero Schema Generator

import {
  table,
  string,
  boolean,
  number,
  json,
  enumeration,
  relationships,
  createSchema,
  type Row,
} from "@rocicorp/zero";

// Define enums as unions

export type Role = "USER" | "ADMIN";

// Define tables

export const userTable = table("User")
  .columns({
    id: string(),
    role: enumeration<Role>(),
  })
  .primaryKey("id");

// Define schema

export const schema = createSchema(
  {
    tables: [
      userTable,
    ],
  }
);

// Define types
export type Schema = typeof schema;
export type User = Row<typeof schema.tables.User>;
"
`;

exports[`Generator > Schema Generation > should handle enums correctly 1`] = `
"// Generated by Zero Schema Generator

import {
  table,
  string,
  boolean,
  number,
  json,
  enumeration,
  relationships,
  createSchema,
  type Row,
} from "@rocicorp/zero";

// Define enums

export enum Role {
  USER = "USER",
  ADMIN = "ADMIN",
}

// Define tables

export const userTable = table("User")
  .columns({
    id: string(),
    role: enumeration<Role>(),
  })
  .primaryKey("id");

// Define schema

export const schema = createSchema(
  {
    tables: [
      userTable,
    ],
  }
);

// Define types
export type Schema = typeof schema;
export type User = Row<typeof schema.tables.User>;
"
`;

exports[`Generator > Schema Generation > should handle relationships correctly 1`] = `
"// Generated by Zero Schema Generator

import {
  table,
  string,
  boolean,
  number,
  json,
  enumeration,
  relationships,
  createSchema,
  type Row,
} from "@rocicorp/zero";

// Define tables

export const userTable = table("User")
  .columns({
    id: string(),
    name: string(),
  })
  .primaryKey("id");

export const postTable = table("Post")
  .columns({
    id: string(),
    title: string(),
    userId: string(),
  })
  .primaryKey("id");


// Define relationships

export const userTableRelationships = relationships(userTable, ({ many }) => ({
  posts: many({
    sourceField: ["id"],
    destField: ["userId"],
    destSchema: postTable,
  })
}));

export const postTableRelationships = relationships(postTable, ({ one }) => ({
  user: one({
    sourceField: ["userId"],
    destField: ["id"],
    destSchema: userTable,
  })
}));

// Define schema

export const schema = createSchema(
  {
    tables: [
      userTable,
      postTable,
    ],
    relationships: [
      userTableRelationships,
      postTableRelationships,
    ],
  }
);

// Define types
export type Schema = typeof schema;
export type User = Row<typeof schema.tables.User>;
export type Post = Row<typeof schema.tables.Post>;
"
`;
